examples/test/testpolicy16216.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16216
  namespace: namespace127
spec:
  podSelector:
    matchLabels:
      key37: value26
      key42: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value6
          key46: value13
      podSelector:
        matchLabels:
          key47: value48
          key2: value10
